--- a/cpk-pentaho/build.xml
+++ b/cpk-pentaho/build.xml
@@ -1,11 +1,28 @@
 <project name="cpk-pentaho" basedir="." default="jar"
          xmlns:ivy="antlib:org.apache.ivy.ant">
   <description>
-    This build file is used to create the cpk-pentaho project
-    and works with the common_build.xml file.
+    This build file is used to create the CPF project
+    and works with the subfloor.xml file.
   </description>
-  <!-- Import the common_build.xml file which contains all the default tasks -->
-  <import file="common_build.xml"/>
+  <!-- Import the subfloor.xml file which contains all the default tasks -->
+  <import file="build-res/subfloor.xml"/>
+
+    <target name="compile.compile" depends="init" description="Performs the actual javac compile">
+    <javac destdir="${classes.dir}"
+           debug="${javac.debug}"
+           deprecation="${javac.deprecation}"
+           fork="true"
+           source="${javac.source}"
+           target="${javac.target}">
+        <classpath>
+            <path refid="classpath"/>
+        </classpath>
+        <src path="${src.dir}"/>
+        <src path="../cpk-pentaho-base/src" />
+    </javac>
+  </target>
+
+
   <property name="plugin.name"
             value="cpk-pentaho"
             description="Name of the plugin"/>
