--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -18,12 +18,12 @@
 	<dependencies defaultconf="default->default">
 
 
-		<dependency org="pt.webdetails" name="cpk-core" rev="TRUNK-SNAPSHOT" transitive="false" changing="true"/>
+		<dependency org="pt.webdetails" name="cpk-core" rev="TRUNK-SNAPSHOT" conf='default,runtime->default' transitive="false" changing="true"/>
 
  		<dependency org="pt.webdetails" name="cpf-core"
-		  rev="TRUNK-SNAPSHOT" transitive="false" changing="true" conf='runtime->default'/>
+		  rev="REFACTOR-SNAPSHOT" transitive="false" changing="true" conf='default,runtime->default'/>
   		<dependency org="pt.webdetails" name="cpf-pentaho"
-		  rev="TRUNK-SNAPSHOT" transitive="false" changing="true" conf='runtime->default'/>
+		  rev="REFACTOR-SNAPSHOT" transitive="false" changing="true" conf='default,runtime->default'/>
 
 		  <dependency org="pentaho" name="pentaho-bi-platform-web-servlet"
                 rev="${dependency.bi-platform.revision}" transitive="false"  changing="true"/>
@@ -38,6 +38,7 @@
 		<dependency org="com.fasterxml.jackson.core" name="jackson-annotations" rev="2.2.2" />
 
 		<dependency org="junit" name="junit" conf="test->default" rev='4.10'/>
+		<dependency org="spring" name="spring-mock" rev="1.0.2" conf="test->default"/>
 		
   </dependencies>
 </ivy-module>
