--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -20,9 +20,9 @@
 
 		<dependency org="pt.webdetails" name="cpk-core" rev="TRUNK-SNAPSHOT" conf='default,runtime->default' transitive="false" changing="true"/>
 
- 		<dependency org="pt.webdetails" name="cpf-core"
+ 		<dependency org="pentaho"       name="cpf-core"
 		  rev="REFACTOR-SNAPSHOT" transitive="false" changing="true" conf='default,runtime->default'/>
-  		<dependency org="pt.webdetails" name="cpf-pentaho"
+  		<dependency org="pentaho"       name="cpf-pentaho"
 		  rev="REFACTOR-SNAPSHOT" transitive="false" changing="true" conf='default,runtime->default'/>
 
 		  <dependency org="pentaho" name="pentaho-bi-platform-web-servlet"
