--- a/cpk-pentaho5/ivy.xml
+++ b/cpk-pentaho5/ivy.xml
@@ -19,8 +19,8 @@
 
 
         <dependency org="pt.webdetails"     name="cpk-core"               rev="TRUNK-SNAPSHOT"                     transitive="false" changing="true" conf='default,runtime->default'/>
-        <dependency org="pt.webdetails"     name="cpf-core"               rev="REFACTOR-SNAPSHOT"                  transitive="false" changing="true" conf='default,runtime->default'/>
-        <dependency org="pt.webdetails"     name="cpf-pentaho5"           rev="REFACTOR-SNAPSHOT"                  transitive="false" changing="true" conf='default,runtime->default'/>
+        <dependency org="pentaho"           name="cpf-core"               rev="REFACTOR-SNAPSHOT"                  transitive="false" changing="true" conf='default,runtime->default'/>
+        <dependency org="pentaho"           name="cpf-pentaho5"           rev="REFACTOR-SNAPSHOT"                  transitive="false" changing="true" conf='default,runtime->default'/>
 
         <dependency org="pentaho"           name="pentaho-platform-api"   rev="${dependency.bi-platform.revision}" transitive="false" changing="true"/>
         <dependency org="pentaho"           name="pentaho-platform-core"  rev="${dependency.bi-platform.revision}" transitive="false" changing="true"/>
