Added access to session vars from kettle elements through cpk

--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -8,4 +8,4 @@ ivy.artifact.group=
 impl.title=Community Plugin Kickstarter
 # dependency.bi-platform.revision=4.8.0-stable
 dependency.bi-platform.revision=TRUNK-SNAPSHOT
-dependency.kettle.revision=5.0.0
+dependency.kettle.revision=5.0.1-stable
