--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -4,7 +4,8 @@ project.stage=TRUNK
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
 project.version=SNAPSHOT
 ivy.artifact.id=cpk-pentaho
-ivy.artifact.group=
+ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
 dependency.bi-platform.revision=4.8.0-stable
 dependency.kettle.revision=4.3.0-stable
+dependency.pentaho-cpf-plugin.revision=REFACTOR-SNAPSHOT
