--- a/cpk-pentaho/build.xml
+++ b/cpk-pentaho/build.xml
@@ -5,7 +5,7 @@
     and works with the subfloor.xml file.
   </description>
   <!-- Import the subfloor.xml file which contains all the default tasks -->
-  <import file="build-res/subfloor.xml"/>
+  <import file="../build-res/subfloor.xml"/>
 
     <target name="compile.compile" depends="init" description="Performs the actual javac compile">
     <javac destdir="${classes.dir}"
@@ -59,7 +59,13 @@
   <property name="plugin.zipfile" value="${plugin.artifact.id}-${distribution.version}.zip"/>
   <property name="plugin.samples.zipfile" value="${plugin.artifact.id}-samples-${distribution.version}.zip"/>
   <property name="plugin.solution.zipfile" value="${plugin.artifact.id}-solution-${distribution.version}.zip"/>
-  <!--=======================================================================
+
+
+  <target name="publish" depends="dist, dist-source, cobertura, publish-nojar">
+    </target>
+
+
+  <!--=======================================================================  
               dist
               Creates a distribution of this project's plugin zip
               ====================================================================-->
