--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
-	<info organisation="pt.webdetails" module="${ivy.artifact.id}" revision="${project.revision}"/>
+	<info organisation="pentaho" module="${ivy.artifact.id}" revision="${project.revision}"/>
 	<configurations>
 		<conf name="default"/>
 		<conf name="source"/>
@@ -18,12 +18,12 @@
 	<dependencies defaultconf="default->default">
 
 
-		<dependency org="pt.webdetails" name="cpk-core" rev="TRUNK-SNAPSHOT" conf='default,runtime->default' transitive="false" changing="true"/>
+		<dependency org="pentaho" name="cpk-core" rev="TRUNK-SNAPSHOT" conf='default,runtime->default' transitive="false" changing="true"/>
 
  		<dependency org="pentaho"       name="cpf-core"
-		  rev="REFACTOR-SNAPSHOT" transitive="false" changing="true" conf='default,runtime->default'/>
+		  rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
   		<dependency org="pentaho"       name="cpf-pentaho"
-		  rev="REFACTOR-SNAPSHOT" transitive="false" changing="true" conf='default,runtime->default'/>
+		  rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
 
 		  <dependency org="pentaho" name="pentaho-bi-platform-web-servlet"
                 rev="${dependency.bi-platform.revision}" transitive="false"  changing="true"/>
