Changed build process for Pentaho 5

--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -4,8 +4,9 @@ project.stage=TRUNK
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
 project.version=SNAPSHOT
 ivy.artifact.id=cpk-pentaho5
-ivy.artifact.group=
+ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
 # dependency.bi-platform.revision=4.8.0-stable
 dependency.bi-platform.revision=TRUNK-SNAPSHOT
 dependency.kettle.revision=5.0.1-stable
+dependency.pentaho-cpf-plugin.revision=REFACTOR-SNAPSHOT
