--- a/cpk-pentaho5/ivy.xml
+++ b/cpk-pentaho5/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
-    <info organisation="pt.webdetails" module="${ivy.artifact.id}" revision="${project.revision}"/>
+    <info organisation="pentaho" module="${ivy.artifact.id}" revision="${project.revision}"/>
     <configurations>
         <conf name="default"/>
         <conf name="source"/>
@@ -18,21 +18,21 @@
     <dependencies defaultconf="default->default">
 
 
-        <dependency org="pt.webdetails"     name="cpk-core"               rev="TRUNK-SNAPSHOT"                     transitive="false" changing="true" conf='default,runtime->default'/>
-        <dependency org="pentaho"           name="cpf-core"               rev="REFACTOR-SNAPSHOT"                  transitive="false" changing="true" conf='default,runtime->default'/>
-        <dependency org="pentaho"           name="cpf-pentaho5"           rev="REFACTOR-SNAPSHOT"                  transitive="false" changing="true" conf='default,runtime->default'/>
+        <dependency org="pentaho"           name="cpk-core"               rev="${project.revision}"                       transitive="false" changing="true" conf='default,runtime->default'/>
+        <dependency org="pentaho"           name="cpf-core"               rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
+        <dependency org="pentaho"           name="cpf-pentaho5"           rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
 
-        <dependency org="pentaho"           name="pentaho-platform-api"   rev="${dependency.bi-platform.revision}" transitive="false" changing="true"/>
-        <dependency org="pentaho"           name="pentaho-platform-core"  rev="${dependency.bi-platform.revision}" transitive="false" changing="true"/>
-        <dependency org="pentaho-kettle"    name="kettle-engine"          rev="${dependency.kettle.revision}"      transitive="false" changing="true"/>
-        <dependency org="pentaho-kettle"    name="kettle-core"            rev="${dependency.kettle.revision}"      transitive="false" changing="true"/>
+        <dependency org="pentaho"           name="pentaho-platform-api"   rev="${dependency.bi-platform.revision}"        transitive="false" changing="true"/>
+        <dependency org="pentaho"           name="pentaho-platform-core"  rev="${dependency.bi-platform.revision}"        transitive="false" changing="true"/>
+        <dependency org="pentaho-kettle"    name="kettle-engine"          rev="${dependency.kettle.revision}"             transitive="false" changing="true"/>
+        <dependency org="pentaho-kettle"    name="kettle-core"            rev="${dependency.kettle.revision}"             transitive="false" changing="true"/>
 
         <dependency org="commons-logging"   name="commons-logging"        rev="1.1.1"/>
         <dependency org="commons-lang"      name="commons-lang"           rev="2.3"/>
                 
         <dependency org="javax.servlet"     name="servlet-api"            rev="2.4"     transitive="false"/>
         <dependency org="javax.ws.rs"       name="jsr311-api"             rev="1.1.1"/>            
-        <dependency org="net.sf.ehcache"    name="ehcache"                rev="2.0.1"/>
+<!--        <dependency org="net.sf.ehcache"    name="ehcache"                rev="2.0.1"/> -->
 
         <dependency org="com.sun.jersey"    name="jersey-core"            rev="1.16"    transitive="false"/>
         <dependency org="com.sun.jersey"    name="jersey-server"          rev="1.16"    transitive="false"/>
@@ -61,7 +61,7 @@
 
         <dependency org="org.json"                  name="json"                 rev="20090211"                      conf="test->default"/>
         <dependency org="junit"                     name="junit"                rev="4.10"                          conf="test->default"/>
-        
+        <dependency org="commons-httpclient"        name="commons-httpclient"   rev='3.1'                           conf="test->default"/>            
         <dependency org="commons-collections"       name="commons-collections"  rev="3.0"   transitive="false"      conf="test->default"/>
          
         <dependency org="rhino"                     name="js"                   rev="1.7R1" transitive="false"      conf="test->default"/>
@@ -80,11 +80,13 @@
         <dependency org="pentaho"       name="pentaho-platform-extensions"      rev="${dependency.bi-platform.revision}" transitive="false" changing="true"  conf="test->default"/>
         <dependency org="pentaho"       name="pentaho-user-console-package"     rev="${dependency.bi-platform.revision}" transitive="false" changing="true"  conf="test->default"/>
         <dependency org="pentaho"       name="pentaho-platform-repository"      rev="${dependency.bi-platform.revision}" transitive="false" changing="true"  conf="test->default"/>
-        <dependency org="pentaho"       name="pentaho-platform-scheduler"       rev="${dependency.bi-platform.revision}" transitive="false" changing="true"  conf="test->default"/>
+ <!--       <dependency org="pentaho"       name="pentaho-platform-scheduler"       rev="${dependency.bi-platform.revision}" transitive="false" changing="true"  conf="test->default"/>
+
+
         <dependency org="pentaho"       name="common-ui"                        rev="${dependency.bi-platform.revision}" transitive="false" changing="true"  conf="test->default">
           <artifact name="common-ui" type="zip" />
         </dependency>       
-
+-->
         
 
     
