--- a/cpk-pentaho/ivy.xml
+++ b/cpk-pentaho/ivy.xml
@@ -18,7 +18,7 @@
 	<dependencies defaultconf="default->default">
 
 
-		<dependency org="pentaho" name="cpk-core" rev="TRUNK-SNAPSHOT" conf='default,runtime->default' transitive="false" changing="true"/>
+		<dependency org="pentaho" name="cpk-core" rev="${project.revision}" conf='default,runtime->default' transitive="false" changing="true"/>
 
  		<dependency org="pentaho"       name="cpf-core"
 		  rev="${dependency.pentaho-cpf-plugin.revision}" transitive="false" changing="true" conf='default,runtime->default'/>
