--- a/cpk-pentaho5/ivy.xml
+++ b/cpk-pentaho5/ivy.xml
@@ -30,12 +30,11 @@
         <dependency org="commons-logging"   name="commons-logging"        rev="1.1.1"/>
         <dependency org="commons-lang"      name="commons-lang"           rev="2.3"/>
                 
-        <dependency org="javax.servlet"     name="servlet-api"            rev="2.4"     transitive="false"/>
-        <dependency org="javax.ws.rs"       name="jsr311-api"             rev="1.1.1"/>            
-<!--        <dependency org="net.sf.ehcache"    name="ehcache"                rev="2.0.1"/> -->
+        <dependency org="javax.servlet"     name="servlet-api"            rev="2.4"        transitive="false"/>
+        <dependency org="javax.ws.rs"       name="jsr311-api"             rev="1.1.1"/>       
 
-        <dependency org="com.sun.jersey"    name="jersey-core"            rev="1.16"    transitive="false"/>
-        <dependency org="com.sun.jersey"    name="jersey-server"          rev="1.16"    transitive="false"/>
+        <dependency org="com.sun.jersey"    name="jersey-core"            rev="1.16"       transitive="false"/>
+        <dependency org="com.sun.jersey"    name="jersey-server"          rev="1.16"       transitive="false"/>
 
 
         <dependency org="org.springframework"           name="spring-support"       rev="2.0.3" />
@@ -45,7 +44,7 @@
         <dependency org="com.fasterxml.jackson.core"    name="jackson-databind"     rev="2.2.2"/>
         <dependency org="com.fasterxml.jackson.core"    name="jackson-annotations"  rev="2.2.2"/>
 
-        
+
         <dependency org="dom4j"                         name="dom4j"                 rev="1.6.1"            transitive="false" conf="test,default->default"/>
         
         <dependency org="org.springframework.security"  name="spring-security-core"  rev="2.0.5.RELEASE"    transitive="false"  conf="test,default->default"/>
@@ -66,7 +65,10 @@
          
         <dependency org="rhino"                     name="js"                   rev="1.7R1" transitive="false"      conf="test->default"/>
         <dependency org="spring"                    name="spring-mock"          rev="1.0.2"                         conf="test->default"/>
-        <dependency org="org.slf4j"                 name="slf4j-log4j12"        rev="1.5.8"                         conf="test->default"/>
+
+        <dependency org="net.sf.ehcache"            name="ehcache-core"         rev="2.5.1"   transitive="false"    conf="test->default"/>
+        <dependency org="org.slf4j"                 name="slf4j-log4j12"        rev="1.6.1"                         conf="test->default"/>
+
         <dependency org="commons-vfs"               name="commons-vfs"          rev="1.0"                           conf="test->default"/>
         <dependency org="jaxen"                     name="jaxen"                rev="1.1"                           conf="test->default"/>
         <dependency org="org.apache.clerezza.ext"   name="org.json.simple"      rev="0.3-incubating"                conf="test->default" />
