--- a/cpk-pentaho/build.xml
+++ b/cpk-pentaho/build.xml
@@ -1,7 +1,7 @@
 <project name="cpk-pentaho" basedir="." default="jar"
          xmlns:ivy="antlib:org.apache.ivy.ant">
   <description>
-    This build file is used to create the CPF project
+    This build file is used to create the CPK project
     and works with the subfloor.xml file.
   </description>
   
@@ -32,6 +32,9 @@
   <property name="plugin.name"
             value="cpk-pentaho"
             description="Name of the plugin"/>
+  <property name="core.resource.dir"
+            value="../cpk-core/res"
+            description="Directory of cpk core resources."/>
   <property name="resource.dir"
             value="resources"
             description="Name of the resource directory"/>
@@ -100,6 +103,12 @@
         <include name="**/*"/>
       </fileset>
     </copy>-->
+
+    <!-- copy resources from cpk source -->
+    <copy todir="${stage.dir}/${plugin.name}">
+      <fileset dir="${core.resource.dir}"/>
+    </copy>
+
     <copy todir="${stage.dir}/${plugin.name}" overwrite="true">
       <fileset dir="${basedir}">
         <include name="readme.txt"/>
